# memos.as

./: .env.vault  .gitignore  .mcp.json  .pre-commit-config.yaml  20250122_memos_as_production_bundle.md  CLAUDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  GEMINI.md  LICENSE  OBSERVABILITY_STATUS.md  PROGRESS_LOG.md  QWEN.md  README.md  VERIFIED_DOCKER_NETWORK_MAP.md  alembic.ini  conftest.py  dependencies-memos.txt  docker-compose.unified.yml  docker-compose.yml  instrumentation_example.py  integrate_observability.py  log_orchestrator_fix_progress.py  log_phase2_progress.py  log_progress.py  mkdocs.yml  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements-observability.txt  requirements.txt  seed_tools.py  temp_check_db_url.py  temp_init_memos_tables.py
.github/: copilot-instructions.md  memos.as.code-workspace
.github/workflows/: keploy-memos.yml  pull_request_check.yml  python-app.yml
.ingest/: app.ini  beta.ingest.as.json
.ingest/omega.ingest.as/: Copilot.ingest.as.yml  Qwen.ingest.as.yml  omega.ingest.as.json
.md/: COPILOT.md  MEMOS_PROGRESS_UPDATE.md  OPERATION_ASGARD_REBIRTH_BASELINE.md  QWEN.md
.md/.agenrt/.instruct/: ettiquette.instruct.md  mar_protocol.instruct.md  mkdocs.instruct.as.md  mkdocs.instruct.md
.md/.agenrt/.tools/: create_readme_node.command.as.toml  create_readme_python.command.as.toml  eod.command.as.toml  outline.command.as.toml  scaffold.command.as.toml  sod.command.as.toml
.md/.instruct/: ettiquette.instruct.md  mar_protocol.instruct.md  mkdocs.instruct.as.md  mkdocs.instruct.md
.md/.persist/: .mcp.json  PROGRESS_LOG.md  log_import_error_troubleshooting.py  log_progress.py  log_tiered_storage_progress.py  session_2025-08-17.poml
.md/.project/: 20250813_memos.project.ingest.as.json  architecture.project.as.md  brand.project.as.md  brief.project.as.md  mcp.task.project.as.md  observability.completed.md  pip_freeze.ini  plan.project.as.md  plan.project.asV1.archived..md  security.project.as.md  task.project.as.md  techstsack.project.as.md
.taskmaster/: state.json
.taskmaster/docs/: Creating and Registering Tools in FastMCP.md  FINAL Sprint Plan MCP HTTP Client Implementation.md  prd.txt  tools_verbose.yml
.taskmaster/tasks/: tasks.json
InGestLLM/: beta.ingest.as.json  conport.instruct.ingest.as.json
InGestLLM/omega.ingest.as/: devenviro,.omega.ingest.as.json
alembic/: README.md  env.py
alembic/versions/: 0001_add_tier_and_constraints.py  0002_add_expires_at_to_memories.py
app/: __init__.py  background_worker.py  config.py  log_progress.md  log_progress.py  main.py  main_observability.py  mcp_server.py  models.py  schemas.py  settings.py  tools.py
app/dagster/: __init__.py  assets.py  repository.py
app/progress_logs/: 20250824_redis_observability_enhancement.md
app/services/: __init__.py  database_health.py  e2e_tracing.py  neo4j_client.py  observability.py  observability_decorators.py  postgres_client.py  qdrant_client.py  redis_client.py  redis_lock.py  redis_utils.py
app/tests/: conftest.py  test_api.py  test_graph_api.py  test_ingest_integration.py  test_integration.py  test_neo4j_client.py  test_simple.py  test_tiered_storage.py
backups/: memos_backup_20250925.dump  memos_backup_20250925T230000.dump  memos_db_backup.sql
config/: alert_rules.yml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  promtail-config.yaml
config/grafana/dashboards/: memos-logs.json  memos-observability.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: datasources.yml
context_portal/: alembic.ini  context.db
context_portal/alembic/versions/: 2025_06_17_initial_schema.py
context_portal/conport_vector_data/: chroma.sqlite3
docs/: AGENT.md  ECOSYSTEM_STATUS_REPORT.md  GEMINI.md  index.md
docs/how-to/: index.md
docs/reference/: index.md  omega-ingest-knowledge-graph-prompt.md  services.md
docs/summaries/: memos_chat_summary_20250819_061434.json  memos_chat_summary_20250819_061434.md
docs/tutorials/: index.md
libs/apexsigma-core/: pyproject.toml
libs/apexsigma-core/apexsigma_core/: models.py
libs/apexsigma-core/apexsigma_core/storage/: interfaces.py
libs/apexsigma-core/apexsigma_core/utils/: config.py
progress_logs/: 20250824_achievements.json  20250824_phase2_session_metadata.json  20250825_achievements.json  20250825_orchestrator_fix_metadata.json
reports/: junit.xml  junit_after_conftest.xml  junit_after_expires_fix.xml  junit_after_fixes.xml  junit_after_migration.xml  junit_after_restart.xml
scripts/: chat_thread_summarizer.py  init_database.py  instrumentation_example.py  integrate_observability.py  log_orchestrator_fix_progress.py  log_phase2_progress.py  log_progress.py  log_tiered_storage_progress.py  log_troubleshooting.py  seed_tools.py  setup_test_databases.py
tests/: README.md  __init__.py  conftest.py  test_integration.py  test_tiered_storage.py
tests/e2e/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py
tests/unit/: __init__.py  conftest.py
tests/utils/: factories.py  mocks.py
