[project]
name = "memos-as"
version = "0.1.0"
description = ""
authors = [
    {name = "SigmaDev11",email = "steynsean11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
[tool.poetry]
packages = [{include = "memos"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
ruff = ">=0.5.3,<1.0.0"
mypy = ">=1.0.0,<2.0.0"
pytest = ">=7.0.0,<8.0.0"
pre-commit = ">=3.0.0,<4.0.0"
mcp = ">=1.0.0,<2.0.0"
httpx = ">=0.25.0,<1.0.0"
fastapi = ">=0.100.0,<1.0.0"
uvicorn = ">=0.20.0,<1.0.0"
pydantic = ">=2.0.0,<3.0.0"
PyJWT = ">=2.0.0,<3.0.0"
python-multipart = ">=0.0.6,<1.0.0"
apexsigma-core = {path = "../../libs/apexsigma-core", develop = true}




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
