[tool.poetry]
name = "memos-as"
version = "0.1.0"
description = "Knowledge Management System"
authors = ["ApexSigma Team <team@apexsigma.solutions>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.100.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.20.0,<1.0.0"}
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
sqlalchemy = ">=2.0.0,<3.0.0"
alembic = ">=1.10.0,<2.0.0"
psycopg2-binary = ">=2.9.0,<3.0.0"
redis = ">=4.0.0,<5.0.0"
neo4j = ">=5.0.0,<6.0.0"
qdrant-client = ">=1.0.0,<2.0.0"
structlog = ">=23.0.0,<24.0.0"
opentelemetry-distro = ">=0.40b0,<1.0.0"
opentelemetry-instrumentation-fastapi = ">=0.40b0,<1.0.0"
prometheus-client = ">=0.17.0,<1.0.0"
# NOTE: The following dependency uses a relative path. Ensure that the directory 'libs/apexsigma-core'
# exists relative to the project root. If cloning or moving the project, this structure must be preserved.
apexsigma-core = {path = "./libs/apexsigma-core", develop = true}
PyJWT = ">=2.0.0,<3.0.0"
python-multipart = ">=0.0.6,<1.0.0"
mcp = ">=1.0.0,<2.0.0"
httpx = ">=0.25.0,<1.0.0"
ruff = ">=0.5.3,<1.0.0"
mypy = ">=1.0.0,<2.0.0"
pre-commit = ">=3.0.0,<4.0.0"
langfuse = ">=2.0.0,<3.0.0"
deprecated = ">=1.2.0,<2.0.0"
opentelemetry-instrumentation = "*"
opentelemetry-instrumentation-sqlalchemy = "*"
opentelemetry-instrumentation-redis = "*"
opentelemetry-exporter-jaeger = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0,<8.0.0"
pytest-cov = ">=4.0.0,<5.0.0"
pytest-asyncio = ">=0.21.0,<1.0.0"
coverage = {extras = ["toml"], version = ">=7.0.0,<8.0.0"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests"
]
junit_family = "xunit2"
junit_xml = "reports/junit.xml"