[project]
name = "memos-as"
version = "0.1.0"
description = ""
authors = [
    {name = "SigmaDev11",email = "steynsean11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

[tool.poetry]
# Disable package mode since we're not building a package
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
mcp = ">=1.0.0,<2.0.0"
httpx = ">=0.25.0,<1.0.0"
fastapi = ">=0.100.0,<1.0.0"
uvicorn = ">=0.20.0,<1.0.0"
starlette = ">=0.40.0,<1.0.0"
h11 = ">=0.16.0,<1.0.0"
setuptools = ">=78.1.1,<79.0.0"
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
PyJWT = ">=2.0.0,<3.0.0"
python-multipart = ">=0.0.6,<1.0.0"
apexsigma-core = {path = "./libs/apexsigma-core", develop = true}
# devenviro-as = { path = "./devenviro.as", develop = true }  # Temporarily disabled for build
neo4j = ">=5.0.0,<6.0.0"
structlog = ">=20.0.0,<30.0.0"
prometheus-client = ">=0.12.0,<1.0.0"
opentelemetry-exporter-jaeger = "*"
deprecated = ">=1.2.0,<2.0.0"
opentelemetry-instrumentation = "*"
opentelemetry-instrumentation-fastapi = "*"
opentelemetry-instrumentation-sqlalchemy = "*"
sqlalchemy = ">=2.0.0,<3.0.0"
opentelemetry-instrumentation-redis = "*"
redis = ">=4.0.0,<5.0.0"
psycopg2-binary = ">=2.9.0,<3.0.0"
alembic = "^1.11.0"
langfuse = ">=2.0.0,<3.0.0"
qdrant-client = ">=1.0.0,<2.0.0"
urllib3 = ">=2.5.0,<3.0.0"
requests = ">=2.32.4,<3.0.0"
jinja2 = ">=3.1.6,<4.0.0"
dagster = ">=1.10.16,<2.0.0"


[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.3,<1.0.0"
mypy = ">=1.0.0,<2.0.0"
pytest = ">=7.0.0,<8.0.0"
pre-commit = ">=3.0.0,<4.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Ensure pytest emits JUnit xUnit2 XML for Trunk Flaky Tests
[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"
junit_family = "xunit2"
junit_xml = "reports/junit.xml"